# haruhi

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt  setup.py
header/: CMakeLists.txt  mtl.hpp  mtl_metal.hpp
src/: CMakeLists.txt  Delegates.cxx  Delegates.hxx  GameEngine.cxx  GameEngine.hxx  LoadResource.cxx  LoadResource.hxx  MathUtil.cxx  MathUtil.hxx  MemoryUtility.hxx  Renderer.cxx  Renderer.hxx  ResourcePool.cxx  ResourcePool.hxx  haru.cxx
test/: CMakeLists.txt  device.cxx  include.cxx  metallib.cxx
